--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,20 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# Windows
+*.exe
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
 *.pdb
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# VS
+*.vcxproj
+*.user
+.vs/
 
-# Fortran module files
-*.mod
-*.smod
+# Linux/Mac
+*.o
+a.out
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# IDE
+.vscode/
+.idea/
 
-# Executables
-*.exe
-*.out
-*.app
-
-# debug information files
-*.dwo
+# Данные (не коммитим пользовательские)
+data/user_data.json
